2007-12-01  Rahul Abrol  <ra5ul@comcast.net>

Reviewed by Adam Roben.

        http://bugs.webkit.org/show_bug.cgi?id=16128
        Ignore resizable=no for window.open().

        * bindings/js/kjs_window.cpp:
        (KJS::setWindowFeature):
        (KJS::parseWindowFeatures):
        * manual-tests/window-open-features-parsing.html:


Canonical link: https://commits.webkit.org/22199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28300 268f45cc-cd09-0410-ab3c-d52691b4dbfc